--- a/AnimalShop.css
+++ b/AnimalShop.css
@@ -1,58 +1,102 @@
 .header{
     margin:0;
     border:0;
-    background: url(https://louisvilleky.gov/sites/default/files/animal_services/animal_services_images/animal-services-header_1.jpg);
-    /*background-color: #00cc99;*/
+    background: url(https://s13.favim.com/mini/160311/background-black-colors-cute-Favim.com-4069958.jpg);
     height: 200px;
    }
-   .middle {
+#headerText{
+    position: absolute;
+    bottom: 530px;
+    left: 16px;
+   }
+.middle {
     margin:0;
     border:0;
     display: flex;
     flex-direction: row;
     height: 700px;
    }
-   .middle > div:nth-child(even){
+.middle > div:nth-child(even){
     margin:0;
     border:0;
     flex: 3 1 auto;
     width: 1px;
     background-color: white;
-    /*border-bottom: 1px solid black;
-    border-top: 1px solid black;*/
    }
-   .middle > div:nth-child(odd){
+.middle > div:nth-child(odd){
     flex: 1 1 auto;
     width: 1px;
-    background-color:  #ccccb3;
+    margin: 10px;
+    background-color:  #e0e0eb;
     border: 1px solid black;
+    border-radius: 25px;
    }
-   .footer{
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+li a {
+  display: block;
+  width: 100px;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+li a:hover {
+  background-color: #555;
+  color: white;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 100px;
+  /*background-color: #f1f1f1;*/
+} 
+.active {
+  background-color: #555;
+  color: white;
+}
+
+li a {
+  display: block;
+}
+ .footer{
     margin:0px;
+    padding: 10px;
     border:0;
     background-color: white;
     height: 50px;
    }
-   div {
+   .div {
      position: relative;
-     border: 1px solid #ccccb3;
-     padding: 1px;
+     border: 1px solid #e0e0eb;
+     padding: 0px;
      background-color: white;
    }
-  #div2 {
+
+  #divRight {
       position: relative;
-      background-color: #ccccb3;
+      border: 1px solid black;
+      background-color: #e0e0eb;
    }
    .table {
-     position: absolute;
+     position: relative;
      bottom: 0;
      display: table;
-     background-color: #ccccb3; }
+     border: 1px solid black;
+     margin: 3px;
+     background-color: #e0e0eb; }
    .table > div { 
-     display: table-row; 
+     display: table-row;
+     border: 1px solid black;
+     margin: 3px;
     }
    .table > div > div {
      display: table-cell;
+     border: 1px solid black;
+     margin: 3px;
      background-color: beige; 
    }
    #textUpperRight{
@@ -61,7 +105,7 @@
     padding: 0;
     position:relative;
     float:left;
-    background-color: #ccccb3;
+    background-color: #e0e0eb;
    }
    #textBottomRight ul{
      margin: 0;
@@ -72,22 +116,54 @@
      float:left;
    }
    #imgPanda{
+    border-radius: 25px;
     width: 140px;
     position: relative;
     float:left;
+    padding: 4px;
    }
    #imgPomsky{
+    position:relative;
     float: left;
-    width: 270px;
+    width: 265px;
     height: 250px;
    }
    #imgPiglet{
+    position:relative;
     float: left;
-    width: 300px;
+    width: 305px;
     height: 250px;
    }
    #imgKitten{
+    position:relative;
     float: left;
-    width: 310px;
+    width: 315px;
     height: 250px;
    }
+
+   @media only screen and (max-width: 700px) {
+      .header, .middle, .middle > div:nth-child(even), .middle > div:nth-child(odd), .footer{
+        width: 100%;
+      }
+      .middle {
+        flex-direction: column;
+      }
+      .middle > div:nth-child(odd){
+        margin: 0px;
+      }
+      #imgPomsky, #imgPiglet, #imgKitten{
+        width: 200px;
+        height: 160px;
+      }
+      #textBottomRight ul{
+        position: relative;
+        float: left;
+        margin-top: 0px;
+        margin: 15px;
+      }
+     /* .footer{
+        position: fixed;
+        bottom: 0;
+background-color: red;
+      }*/
+  }
