--- a/AnimalShop.css
+++ b/AnimalShop.css
@@ -14,7 +14,7 @@
     border:0;
     display: flex;
     flex-direction: row;
-    height: 700px;
+    height: auto;
    }
 .middle > div:nth-child(even){
     margin:0;
@@ -52,7 +52,6 @@ ul {
   margin: 0;
   padding: 0;
   width: 100px;
-  /*background-color: #f1f1f1;*/
 } 
 .active {
   background-color: #555;
@@ -141,7 +140,7 @@ li a {
     height: 250px;
    }
 
-   @media only screen and (max-width: 700px) {
+   @media (max-width: 700px) {
       .header, .middle, .middle > div:nth-child(even), .middle > div:nth-child(odd), .footer{
         width: 100%;
       }
@@ -161,9 +160,7 @@ li a {
         margin-top: 0px;
         margin: 15px;
       }
-     /* .footer{
-        position: fixed;
-        bottom: 0;
-background-color: red;
-      }*/
+      .footer{
+        font-style: italic;
+      }
   }
