--- a/AnimalShop.css
+++ b/AnimalShop.css
@@ -154,12 +154,23 @@ li a {
         width: 200px;
         height: 160px;
       }
-      #textBottomRight ul{
-        position: relative;
-        float: left;
+      #textUpperRight{
+        margin: 0;
         margin-top: 0px;
-        margin: 15px;
-      }
+        padding: 0;
+        position:relative;
+        float:left;
+        background-color: #e0e0eb;
+       }
+       #textBottomRight ul{
+         margin: 0;
+         margin-top: 130px;
+         padding: 0;
+         list-style-type: none;
+         position:absolute;
+         float:left;
+         left: 140px;
+       }
       .footer{
         font-style: italic;
       }
