--- a/AnimalShop.css
+++ b/AnimalShop.css
@@ -35,13 +35,18 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    width: 200px;
+    display: inline-block;
+    position: relative;
+    left: 30px;
 }
 li a {
-  display: block;
+  display: inline-block;
   width: 100px;
   color: #000;
   padding: 8px 16px;
   text-decoration: none;
+  
 }
 li a:hover {
   background-color: #555;
@@ -52,6 +57,7 @@ ul {
   margin: 0;
   padding: 0;
   width: 100px;
+  display: inline-block;
 } 
 .active {
   background-color: #555;
